[package]
name = "execution_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.11.0"
ntfs = "0.3.1"
rot-13 = "0.1.1"

[target.'cfg(windows)'.dependencies]
nt-hive = "0.2.0"
datetime = "0.5.2"